# BlinkWM-dev

./: Cargo.toml  PLAN.md  README.md  release.sh
blink/: Cargo.toml
blink-bar/: Cargo.toml
blink-bar/src/: main.rs
blink-conf/: Cargo.toml
blink-conf/src/: main.rs
blink-ipc/: Cargo.toml
blink-ipc/src/: lib.rs
blink-launch/: Cargo.toml
blink-launch/src/: main.rs
blink-pkg/: Cargo.toml
blink-pkg/src/: main.rs
blink-wm/: Cargo.toml
blink-wm/src/: bar.rs  config.rs  ipc.rs  layout.rs  main.rs  window.rs  workspace.rs  x11.rs
blink/src/: main.rs
colorschemes/: nord.lua  onedark.lua
pkg/: .SRCINFO  PKGBUILD  blink-wm-0.1.0-1-x86_64.pkg.tar.zst  blink-wm-debug-0.1.0-1-x86_64.pkg.tar.zst
pkg/files/: blink-wm.sh
pkg/pkg/blink-wm/: .BUILDINFO  .MTREE  .PKGINFO
pkg/pkg/blink-wm-debug/: .BUILDINFO  .MTREE  .PKGINFO
pkg/pkg/blink-wm/usr/lib/systemd/system/: blink-wm.service
release/0.1.0/: blink-bar  blink-conf  blink-launch  blink-pkg  config.lua
release/0.1.0/colorschemes/: catppuccin.lua  gruvbox-dark.lua  vscode-dark.lua
release/0.1.0/pkg/: .SRCINFO  PKGBUILD
release/0.1.0/pkg/files/: blink.desktop
