[package]
name = "blink-launch"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "blink-launch"
path = "src/main.rs"

[dependencies]
blink-ipc = { path = "../blink-ipc" }
ratatui = "0.26"
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
fuzzy-matcher = "0.3"
log = "0.4"
env_logger = "0.11"
dirs = "5.0"
