[package]
name = "blink-wm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
blink-ipc = { path = "../blink-ipc" }
x11rb = "0.13"
xkbcommon = "0.5"
rlua = "0.20"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
dirs = "5.0"
thiserror = "2.0"
parking_lot = "0.12"
once_cell = "1.19"
